## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST =

INCLUDES = -I.. ${INC_SPECS}

SUBDIRS =
SUBLIB =

# Requirements for ASG library
noinst_LIBRARIES = libasg.a

libasg_a_SOURCES = \
   var.c list.c cstitch.c psfigs.c debug.c utility.c parse_support.c \
   global_route.c local_route.c place.c terminals.c n2a.c asg.c asg_module.c

